Made a few fixes to About Us. Footer is issue on desktop, which also causes issue on mobile

--- a/assets/css/partials/_aboutus.scss
+++ b/assets/css/partials/_aboutus.scss
@@ -397,6 +397,6 @@
 
 .page-template-aboutus footer {
   margin-top:25px;
-  transform:translateY(0px);
+  transform:translateY(2000px);
   position:relative;
 }
